# W1TN3SS

./: .gitleaks.toml  README.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  other.yml
.github/workflows/: ci.yml  release-sign.yml
.s4f3-data/: context_usage.json
crates/itasha-crash-capture/src/: client.rs  consent.rs  emit.rs  lib.rs  monitor.rs  policy.rs  scrub.rs
crates/itasha-crash-capture/tests/: structural_isolation.rs
crates/itasha-report-aggregate/src/: star.rs  submit.rs
crates/itasha-report-core/: Cargo.toml  README.md
crates/itasha-report-core/src/: backend.rs  consent.rs  e2e.rs  envelope.rs  intake.rs  lib.rs  preview.rs  quasi.rs  redact.rs  sanitize.rs  spool.rs
crates/itasha-report-core/tests/: consent_send_contract.rs  e2e_encryption_contract.rs  sanitizer_properties.proptest-regressions  sanitizer_properties.rs
crates/itasha-report-transport-tor/src/: arti_connector.rs  config.rs  connector.rs  http.rs  lib.rs  transport.rs
docs/: WIRING.md  adr-0002-coverage-floor-and-exclusions.md  integration-guide.md  privacy-policy.md  what-we-collect.md
supply-chain/: config.toml
